Fix spacing at bottom of year containers on archive page
Add bottom padding to year containers to create proper spacing between
collapsed year sections on the archive page.

Changes:
- Update .archive-list > li padding-bottom from 0 to 1.5em

--- a/assets/scss/_archives.scss
+++ b/assets/scss/_archives.scss
@@ -170,7 +170,7 @@
   margin-top: 20px;
 
   > li {
-    padding-bottom: 0;
+    padding-bottom: 1.5em;
   }
 }
 
